# proof

./: .gitignore  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  MANIFEST  MANIFEST.in  README  README.rst  example.csv  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
proof/: __init__.py  analysis.py  proof.py  utils.py
tests/: test_proof.py
